<resources>
    <string name="app_name">Little Big Spender</string>

    <!--Strings used throughout the app-->
    <string name="all_overview">Overview</string>
    <string name="all_transactions">Transactions</string>
    <string name="all_accounts">Accounts</string>
    <string name="all_cryptocurrency">Cryptocurrency</string>
    <string name="all_settings">Settings</string>
    <string name="all_statistics">Statistics</string>
    <string name="all_categories">Categories</string>
    <string name="all_recurring">Recurring Transactions</string>
    <string name="all_income">Income</string>
    <string name="all_expense">Expense</string>
    <string name="all_category">Category</string>
    <string name="all_account">Account</string>
    <string name="all_amount">Amount</string>
    <string name="all_date">Date</string>
    <string name="all_about">About</string>
    <string name="all_edit">Edit</string>
    <string name="all_delete">Delete</string>
    <string name="all_yes">Yes</string>
    <string name="all_no">No</string>
    <string name="all_ok">OK</string>
    <string name="all_name">Name</string>
    <string name="all_type">Type</string>
    <string name="all_warning_delete_message">Are you sure you want to delete</string>
    <string name="all_save">Save</string>
    <string name="all_cancel">Cancel</string>
    <string name="all_plus_symbol">+</string>
    <string name="all_minus_symbol">-</string>
    <string name="all_not_available">N/A</string>
    <string name="all_blank_field_error">This field cannot be blank</string>
    <string name="all_cannot_be_zero_error">Amount cannot be 0</string>
    <string name="all_error">Error</string>
    <string name="all_open_parentheses">(</string>
    <string name="all_close_parentheses">)</string>
    <string name="all_name_long_error">Name too long</string>

    <!--Introduction-->
    <string name="intro_welcome_title">Welcome to Little Big Spender</string>
    <string name="intro_welcome_text">Track your expenses and income no matter how big or little!</string>
    <string name="intro_feature1_title">Record Income and Expense</string>
    <string name="intro_feature1_text">Easily add income and expense by associating them with a category and an account.</string>
    <string name="intro_feature2_title">Charts</string>
    <string name="intro_feature2_text">View easy to understand charts to get a better idea of your finances.</string>
    <string name="intro_feature3_title">Cryptocurrency Accounts</string>
    <string name="intro_feature3_text">Add cryptocurrency accounts and use them as regular accounts. You can also get real time update of their exchange rate to your home currency.</string>

    <!--Accounts-->
    <string name="accounts_delete_toast">Account deleted</string>
    <string name="accounts_editDialog_title">Edit Account</string>
    <string name="accounts_transferDialog_title">Balance Transfer</string>
    <string name="accounts_transferDialog_transfer">Transfer</string>
    <string name="accounts_transferDialog_from">From</string>
    <string name="accounts_transferDialog_to">To</string>
    <string name="accounts_lastUpdated">Last updated:</string>
    <string name="accounts_never">Never</string>
    <string name="accounts_moreThanAWeek">more than a week ago</string>
    <string name="accounts_daysAgo">days ago</string>
    <string name="accounts_aDayAgo">a day ago</string>
    <string name="accounts_hoursAgo">hours ago</string>
    <string name="accounts_anHourAgo">an hour ago</string>
    <string name="accounts_minutesAgo">minutes ago</string>
    <string name="accounts_aMinuteAgo">a minute ago</string>
    <string name="accounts_lessThanAMinute">less than a minute ago</string>
    <string name="accounts_addAccount">Add Account</string>
    <string name="accounts_addCrypto">Add Cryptocurrency</string>
    <string name="accounts_refreshAttempt">Attempting to refresh</string>
    <string name="accounts_refreshCompleted">Refresh completed</string>
    <string name="accounts_refreshFailed">Refresh failed</string>
    <string name="accounts_name_exists_error">Account already exists</string>
    <string name="accounts_crypto_name_error">Cannot use cryptocurrency name</string>
    <string name="accounts_cannot_delete_error">Account cannot be deleted because there are transactions associated with it.</string>
    <string name="accounts_transfer_exceed_error">Transfer amount cannot exceed source account balance</string>
    <string name="accounts_add_balance">Balance</string>
    <string name="accounts_add_addToast">New account added</string>
    <string name="accounts_add_discardToast">New account discarded</string>
    <string name="accounts_cryptoAdd_addToast">New cryptocurrency added</string>
    <string name="accounts_cryptoAdd_discardToast">New cryptocurrency discarded</string>

    <!--Overview-->
    <string name="overview_net_worth">Net worth</string>
    <string name="overview_total">Total</string>
    <string name="overview_day">Day:</string>
    <string name="overview_week">Week:</string>
    <string name="overview_add_income">Add Income</string>
    <string name="overview_add_expense">Add Expense</string>

    <!--Categories-->
    <string name="categories_delete_toast">Category deleted</string>
    <string name="categories_editDialog_title">Edit Category</string>
    <string name="categories_name_exist_error">Category already exists</string>
    <string name="categories_cannot_delete_error">Category cannot be deleted because there are transactions associated with it.</string>
    <string name="categories_add_addToast">New category added</string>
    <string name="categories_add_discardToast">New category discarded</string>

    <!--Transactions-->
    <string name="transaction_warning_delete_message">Are you sure you want to delete transaction?</string>
    <string name="transaction_delete_toast">Transaction deleted</string>
    <string name="transaction_editDialog_title">Edit Transaction</string>
    <string name="transaction_filterDialog_title">Filter by</string>
    <string name="transaction_filterDialog_positive">Apply</string>
    <string name="transaction_filterDialog_reset">Reset</string>
    <string name="transaction_add_recurring">Recurring?</string>
    <string name="transaction_crypto_negative_balance_error">Not enough cryptocurrency to carry out transaction</string>
    <string name="transaction_fiat_negative_balance_error">Not enough funds in account</string>

    <!--Recurring Transactions-->
    <string name="recurring_warning_delete_message">Are you sure you want to delete recurring transaction?</string>
    <string name="recurring_delete_toast">Recurring transaction deleted</string>
    <string name="recurring_editDialog_title">Edit Recurring Transaction</string>

    <!--Settings-->
    <string name="settings_currency">Currency</string>
    <string name="settings_transaction_overdraft">Allow transactions to make account balances negative</string>
    <string name="settings_erase_all_data">Erase all application data</string>
    <string name="settings_erase_all_data_warning">Are you sure you want to erase all application data? This cannot be undone.</string>
    <string name="settings_recurring_notification_text">Notification about recurring transactions</string>

    <!--Statistics-->
    <string name="statistics_income_breakdown">Income Breakdown</string>
    <string name="statistics_expense_breakdown">Expense Breakdown</string>
    <string name="statistics_accounts_cashFlow">Accounts Cash Flow</string>
    <string name="statistics_crypto_breakdown">Crypto Breakdown</string>

    <!--About-->
    <string name="about_description">
        <![CDATA[
        This app is developed by <strong>Boyan Stoynov</strong>.
         <br /><br />
         Presented in part fulfillment of the requirements of the Degree of Master of Science at the University of Glasgow.
        ]]>
    </string>
    <string name="about_license">License</string>
    <string name="about_license_description">
        <![CDATA[
        MIT License
        <br /><br />
        Copyright &#169; 2018, Boyan Stoynov
        <br />
        All rights reserved.
        <br /><br />
        Permission is hereby granted, free of charge, to any person obtaining a copy
        of this software and associated documentation files (the "Software"), to deal
        in the Software without restriction, including without limitation the rights
        to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
        copies of the Software, and to permit persons to whom the Software is
        furnished to do so, subject to the following conditions:
        <br /><br />
        The above copyright notice and this permission notice shall be included in
        all copies or substantial portions of the Software.
        <br /><br />
        THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
        IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
        FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
        AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
        LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
        OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
        THE SOFTWARE.
        ]]>
    </string>
    <string name="about_api">Crypto API</string>
    <string name="about_api_description">
        <![CDATA[
        Cryptocurrency prices in the application use the CryptoCompare API licensed under a Creative Commons - Attribution Non-Commercial license.
         <br /><br />
         You can find more about the API <a href="https://min-api.cryptocompare.com/">here</a>.
        ]]>
    </string>

    <!--Notifications-->
    <string name="recurring_notification_title">Recurring Transaction Reminder</string>
    <string name="recurring_notification_text"> days before a transaction with an amount of </string>

</resources>
