<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_recurring"
            android:icon="@drawable/ic_recurring"
            android:title="@string/all_recurring" />
        <item
            android:id="@+id/item_categories"
            android:icon="@drawable/ic_categories"
            android:title="@string/all_categories" />
        <item
            android:id="@+id/item_statistics"
            android:icon="@drawable/ic_statistics"
            android:title="@string/all_statistics" />
        <item
            android:id="@+id/item_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/all_settings" />
        <item
            android:id="@+id/item_about"
            android:icon="@drawable/ic_about"
            android:title="@string/all_about" />
    </group>
</menu>
