<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/softGray"
    tools:context="com.boyanstoynov.littlebigspender.main.transactions.AddTransactionActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_addTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/android:colorPrimary"
        android:minHeight="?attr/android:actionBarSize"
        android:theme="?attr/android:actionBarTheme">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingEnd="16dp"
            tools:ignore="RtlSymmetry">

            <ImageButton
                android:id="@+id/button_addTransaction_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/android:actionBarItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_cancel"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/button_addTransaction_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/android:actionBarItemBackground"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_confirm"
                tools:ignore="ContentDescription" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TabLayout
        android:id="@+id/tabLayout_addTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/toolbar_addTransaction">

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem_addTransaction_income"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_income" />

        <android.support.design.widget.TabItem
            android:id="@+id/tabItem_addTransaction_expense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_expense" />
    </android.support.design.widget.TabLayout>

    <include
        android:id="@+id/include_layoutTransaction"
        layout="@layout/transaction_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabLayout_addTransaction" />

    <CheckBox
        android:id="@+id/checkbox_addTransaction_recurring"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/transaction_add_recurring"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include_layoutTransaction" />

    <Spinner
        android:id="@+id/spinner_addTransaction_recurringMode"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:entries="@array/recurring_modes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_addTransaction_recurring"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>